--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,80 @@
 
+<!DOCTYPE html>
+<html xmlns="http://www." xml:lang="en" lang="en-us">
+
+<head>
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+   <title>{{ page.title }}</title>
+   <meta name="author" content="13AI" />
+   <link href="http://ottiou.github.io" rel="alternate" title="Ottiou Bai" type="application/atom+xml" />
+   <!-- <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/> -->
+
+   <!-- syntax highlighting CSS -->
+   <link rel="stylesheet" href="/syntax.css" type="text/css" />
+
+   <!-- Homepage CSS -->
+   <link rel="stylesheet" href="/screen.css" type="text/css" media="screen, projection" />
+   
+   <!-- mathjax -->
+   <script type="text/javascript"
+   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+   MathJax.Hub.Config({
+    tex2jax: {
+    inlineMath: [['$','$']],
+    displayMath: [['$$','$$']],
+    processEscapes: true
+    }
+  });
+  </script>
+  <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
+
+
+</head>
+<body>
+  <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
+
+<div class="site">
+  <div class="title">
+  <!-- <img src="/images/logo.png"/></a> -->
+    <a href="/">调和分析</a>
+    <a class="extra" href="/">主页</a>
+    <a class="extra" href="/pak-cv.pdf">核心问题</a>
+    <a class="extra" href="/pak-cv.pdf">应用</a>
+    <a class="extra" href="/pak-cv.pdf">团队介绍</a>
+  </div>
+
+  {{ content }}
+
+  
+
+  <div class="footer">
+    <div class="contact">
+      <p>
+        北京调和分析工作室
+      </p>
+    </div>
+    <div class="contact">
+      <p>
+        北京调和分析工作室
+      </p>
+    </div>
+    <div class="contact">
+    <p>
+    email:
+    <!--<br />-->
+    <a href="mailto:ottiou.bai@gmail.com">harmonic_analysis@outlook.com</a>
+    <!--<br />-->
+    <!-- <a href="http://github.com/ottiou/">github.com/ottiou</a><br /> -->
+    </p>
+    </div>
+    <!-- <div class="rss"> -->
+      <!-- <a href="http://www.ottiou.tw"> -->
+        <!-- <img src="/images/rss.png" alt="Subscribe to RSS Feed" /> -->
+      <!-- </a> -->
+    <!-- </div> -->
+  </div>
+</div>
+
+</body>
+</html>
