--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
     </div>
     <div class="contact">
     <p>
-    email:
+    Email:
     <!--<br />-->
     <a href="mailto:ottiou.bai@gmail.com">harmonic_analysis@outlook.com</a>
     <!--<br />-->
