--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,10 @@
     <a href="/">调和分析</a>
     <a class="extra" href="/">主页</a>
     <a class="extra" href="/pak-cv.pdf">核心问题</a>
-    <a class="extra" href="/pak-cv.pdf">应用</a>
-    <a class="extra" href="/pak-cv.pdf">团队介绍</a>
+    <a class="extra" href="/pak-cv.pdf">PDE方法</a>
+    <a class="extra" href="/pak-cv.pdf">几何应用</a>
+    <a class="extra" href="/pak-cv.pdf">数论应用</a>
+    <a class="extra" href="/pak-cv.pdf">数学物理</a>
   </div>
 
   {{ content }}
@@ -49,21 +51,21 @@
   
 
   <div class="footer">
-    <div class="contact">
+<!--     <div class="contact">
       <p>
         北京调和分析工作室
       </p>
-    </div>
+    </div> -->
     <div class="contact">
       <p>
-        北京调和分析工作室
+        调和分析及其应用
       </p>
     </div>
     <div class="contact">
     <p>
     Email:
     <!--<br />-->
-    <a href="mailto:ottiou.bai@gmail.com">harmonic_analysis@outlook.com</a>
+    <a href="mailto:harmonic_analysis@outlook.com">harmonic_analysis@outlook.com</a>
     <!--<br />-->
     <!-- <a href="http://github.com/ottiou/">github.com/ottiou</a><br /> -->
     </p>
