--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,8 @@
 <div class="site">
   <div class="title">
   <!-- <img src="/images/logo.png"/></a> -->
-    <a href="/">调和分析</a>
-    <a class="extra" href="/">主页</a>
+    <!-- <a href="/">调和分析</a> -->
+    <a href="/">主页</a>
     <a class="extra" href="/pak-cv.pdf">核心问题</a>
     <a class="extra" href="/pak-cv.pdf">PDE方法</a>
     <a class="extra" href="/pak-cv.pdf">几何应用</a>
