--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
     <a class="extra" href="/pak-cv.pdf">几何应用</a>
     <a class="extra" href="/pak-cv.pdf">数论应用</a>
     <a class="extra" href="/pak-cv.pdf">数学物理</a>
+    <a class="extra" href="/about">关于我们</a>
   </div>
 
   {{ content }}
