--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,11 +39,11 @@
   <!-- <img src="/images/logo.png"/></a> -->
     <!-- <a href="/">调和分析</a> -->
     <a href="/">主页</a>
-    <a class="extra" href="/pak-cv.pdf">核心问题</a>
-    <a class="extra" href="/pak-cv.pdf">PDE方法</a>
-    <a class="extra" href="/pak-cv.pdf">几何应用</a>
-    <a class="extra" href="/pak-cv.pdf">数论应用</a>
-    <a class="extra" href="/pak-cv.pdf">数学物理</a>
+    <a class="extra" href="/core">核心问题</a>
+    <a class="extra" href="/pde-method">PDE方法</a>
+    <a class="extra" href="/geometry.pdf">几何应用</a>
+    <a class="extra" href="/number-theory">数论应用</a>
+    <a class="extra" href="/mathematical-physics">数学物理</a>
     <a class="extra" href="/about">关于我们</a>
   </div>
 
