--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
     <a href="/">主页</a>
     <a class="extra" href="/core">核心问题</a>
     <a class="extra" href="/pde-method">PDE方法</a>
-    <a class="extra" href="/geometry.pdf">几何应用</a>
+    <a class="extra" href="/geometry">几何应用</a>
     <a class="extra" href="/number-theory">数论应用</a>
     <a class="extra" href="/mathematical-physics">数学物理</a>
     <a class="extra" href="/about">关于我们</a>
