--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,8 @@ layout: default
 </div>
 <br />
 
-<hr>
+<!-- 评论框 -->
+<!-- <hr>
 <div id="related">
   <h2>留言</h2>
 <form action="https://send.pageclip.co/ay3GzKSJWZkBCS7Hu4ZpqKcsnW6ksaYg" class="pageclip-form" method="post">
@@ -25,7 +26,7 @@ layout: default
 </div>
 
 <br />
-<hr>
+<hr> -->
 
 <div id="related">
   <h2>Related Posts</h2>
