--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,12 @@
-
 <!DOCTYPE html>
-<html xmlns="http://www." xml:lang="en" lang="en-us">
+<html style="font-size: 67.36px;">
 
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
    <title>{{ page.title }}</title>
-   <meta name="author" content="13AI" />
-   <link href="http://ottiou.github.io" rel="alternate" title="Ottiou Bai" type="application/atom+xml" />
+   <meta name="author" content="Harmonic Analysis" />
+   <link href="http://" rel="alternate" title="Harmonic Analysis" type="application/atom+xml" />
    <!-- <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/> -->
 
    <!-- syntax highlighting CSS -->
