--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 
 <div class="site">
   <div class="title">
-  <!-- <img src="/images/logo.png"/></a> -->
+  <img src="/words.png"/></a>
     <!-- <a href="/">调和分析</a> -->
     <a href="/">主页</a>
     <a class="extra" href="/core">核心问题</a>
