--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
     </div> -->
     <div class="contact">
       <p>
-        调和分析及其应用
+        <span style="color: #666666"> Copyright © 2023 调和分析及其应用网 版权所有</span>
       </p>
     </div>
     <div class="contact">
