--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
     </div>
     <div class="contact">
     <p>
-    Email:
+    联系方式:
     <!--<br />-->
     <a href="mailto:harmonic_analysis@outlook.com">harmonic_analysis@outlook.com</a>
     <!--<br />-->
