--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,10 +33,8 @@
 <body>
   <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 
-<div class="site">
-<a><img src="/words.png"/></a>
-  </div>
 <div class="site"> 
+  <a><img src="/words.png"/></a><br />
   <div class="title">    
     <!-- <a href="/">调和分析</a> -->
     <a href="/">主页</a>
